<resources>
    <string name="app_name">DanhTonyMinesweeper</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--login -->
    <string name="userid_hint">Enter your email</string>
    <string name="pwd_hint">Enter your Password</string>
    <string name="login_text">Sign In</string>
    <string name="sign_up_text">Register</string>

    <!--login preferences-->
    <string name="LOGIN_PREFS">uw.tacoma.edu.danhtonyminesweeper.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGIN_FILE"> danhs.uw.tacoma.edu.danhtonyminesweeper.LOGIN_FILE</string>

    <string name="action_logout">Log Out</string>

    <string name="leaderboard_text">Leaderboard</string>



    <!--Login error response-->

    <string name="missing_email">Enter userid</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="missing_password">Enter password</string>
    <string name="invalid_password">Enter password of at least 6 characters</string>


    <string name="username">Username</string>
    <string name="games">Games</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="achievement_text">Achievements</string>

    <string name="play_text">Play</string>
    <string name="Flag_Toggle_On">Flag</string>
    <string name="Flag_Toggle_Off">No Flag</string>
    <string name="Game_Over_Text">YOU HIT A MINE! GAME OVER</string>

</resources>
