<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="danhs.uw.tacoma.edu.danhtonyminesweeper.authenticate.LoginFragment">



    <EditText
        android:id="@+id/userid_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:hint="@string/userid_hint" />

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pwd_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_gravity="end"
        android:text="@string/login_text" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_gravity="end"
        android:text="@string/sign_up_text" />

</LinearLayout>
