<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="danhs.uw.tacoma.edu.danhtonyminesweeper.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/text_margin"
        android:textSize="24sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play_button"
        android:layout_gravity="center"
        android:text="@string/play_text"
        android:onClick="openPlay"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leaderboard_button"
        android:layout_gravity="center"
        android:text="@string/leaderboard_text"
        android:onClick="openLeaderboard"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/achievement_button"
        android:layout_gravity="center"
        android:text="@string/achievement_text"
        android:onClick="openAchievement"/>


</LinearLayout>
